<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FirstActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/banglalinkId"
                    android:backgroundTint="#64e414"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/banglalink_logo" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/banglalink" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:backgroundTint="#64e414"
                    android:id="@+id/grameenPhoneId"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/grameenphone" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/grameenPhone" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/airtelId"
                    android:backgroundTint="#64e414"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/airtel_logo" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/airtel" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/robiId"
                    android:backgroundTint="#64e414"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/robi" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/robi" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/teletalkId"
                    android:backgroundTint="#64e414"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/teletalk" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/teletalk" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/aboutMeId"
                    android:backgroundTint="#64e414"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_developer" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/about" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>